<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_top_orange"
            android:paddingTop="85dp"
            android:paddingBottom="50dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <EditText
                android:id="@+id/username"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:backgroundTint="#B3B3B3"
                android:textColor="#5C5C5C"
                android:textColorHint="#9E9E9E"/>

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:backgroundTint="#B3B3B3"
                android:textColor="#5C5C5C"
                android:textColorHint="#9E9E9E"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:backgroundTint="#B3B3B3"
                android:textColor="#5C5C5C"
                android:textColorHint="#9E9E9E"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:minHeight="48dp"
                android:layout_marginTop="24dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/register"
                android:textColor="#5C5C5C"
                android:backgroundTint="#FCF3D6"/>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/sudah_punya_akun"
                android:textColor="#5C5C5C"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
