<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!-- Bagian atas oranye -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/bg_top_orange">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <!-- Konten bawah -->
        <LinearLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:backgroundTint="#B3B3B3"
                android:textColor="#999797"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                android:backgroundTint="#B3B3B3"
                android:textColor="#999797"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textColor="#999797"
                android:backgroundTint="#FCF3D6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"/>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/belum_punya_akun_register"
                android:textColor="#999797"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
